# torch_time

./: pyproject.toml  requirements.txt  test.toml
tests/: core_test.py
torch_time/: __init__.py  core.py
