[build-system]
requires = ["setuptools>=64", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_time"
description = "Time utilities for PyTorch"
authors = [{ name = "Jason Leaver", email = "leaver2000@gmail.com" }]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.tests]
file = ["tests/requirements.txt"]


[tool.setuptools.dynamic.optional-dependencies.all]
file = [
    "requirements.txt",
    "tests/requirements.txt",
    "docs/requirements-stubs.txt",
    "docs/requirements-lint.txt",
]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["torch_time"]

[tool.setuptools.package-data]
torch_time = ["py.typed", "*.pyi", "*.pyx", "*.pxd"]

[tool.coverage.run]
source = ["torch_time/"]

[tool.coverage.xml]
output = ".reports/coverage.xml"

[tool.coverage.report]
ignore_errors = false
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:s
    # "def __repr__",
    # "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    # "raise AssertionError",
    "raise NotImplementedError",
    "AbstractMethodError",
    # Don't complain if non-runnable code isn't run:
    # "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
target-version = ['py312']
line-length = 99
include = '(nzthermo|tests)\/.*(\.py|\.pyi)'
force-exclude = '(nzthermo|tests)\/.*(\.pyx)'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.ruff]
target-version = "py312"
line-length = 99
fix = true

[tool.ruff.lint]
ignore = [
    "E731", # do not assign a lambda expression, use a def
    "E402", # module level import not at top of file
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # do not use variables named 'l', 'O', or 'I'
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportOverlappingOverload = "none"
reportMissingModuleSource = "none"
